--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -168,9 +168,13 @@
                                                     (click)="billMasterFromReset()">
                                                     Reset
                                                 </button>
-                                                <button type="button" mat-raised-button color="primary"
+                                                <button type="button" class="me-3" mat-raised-button color="primary"
                                                     (click)="getBillMasterExport()">
                                                     Quick Download
+                                                </button>
+                                                <button type="button" mat-raised-button color="primary"
+                                                    (click)="getBillMasterAllBalance()">
+                                                    All Balance
                                                 </button>
                                                 <!-- <button mat-raised-button color="primary"
                                                     printTitle="sale Report {{this.shopLists}}"
