--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -1803,21 +1803,14 @@
                                                             <div class="col-12 pt-1 pb-1">
                                                                 <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff;">{{this.shop.Name}}</span> 
                                                             </div>
-                                                            <div class="col-4 ">
+                                                            <div class="col-6">
                                                                 <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff;">{{this.shop.MobileNo1}}</span>
                                                             </div>
-                                                            <div class="col-1 ">
-                                                                <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff; font-size:10px; line-height: 9px;">Valid <br> From</span>
+                                                            <div class="col-6" style="text-align: right;">
+                                                                <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff; font-size:10px; line-height: 9px;">Expiry {{this.data.VisitDate}}</span>
                                                             </div>
-                                                            <div class="col-3 ">
-                                                                <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff;">{{this.data.VisitDate}}</span>
-                                                            </div>
-                                                            <div class="col-1 ">
-                                                                <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff; font-size:10px; line-height: 9px;">Valid <br> To</span>
-                                                            </div>
-                                                            <div class="col-3 ">
-                                                                <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff;">{{this.data.VisitDate}}</span>
-                                                            </div>
+                                                           
+                                                           
                                                         </div>                
                                                    </div> 
                                                    <div class="col-6">
@@ -2419,29 +2412,38 @@
                                             <div class="row">
                                                 <div id="membershipCard" class="col-6" style="background-image: linear-gradient(2deg, #ffc10731, #ffc10737),url(https://png.pngtree.com/thumb_back/fh260/background/20220428/pngtree-abstract-3d-elegant-golden-ribbon-elements-and-lighting-effect-sparking-glitter-image_1108708.jpg); border-radius: 4px; padding: 4px 15px;background-size: 100%; box-shadow: 0px 0px 3px 0px #7a672d;">
                                                      <div class="row pt-2" style="border-radius: 4px;">
-                                                         <div class="col-9 ">
+                                                         <div class="col-12 ">
                                                             <h4 class="m-0" style="font-weight: 800; color: #000000;text-shadow: 2px 2px 4px #bfbfbf; ">{{this.data.Title}} {{this.data.Name}}</h4> 
 
                                                             <h4 class="m-0" style="font-weight: 800; color: #000000;text-shadow: 2px 2px 4px #bfbfbf; ">{{this.data.MobileNo1}}</h4> 
                                                          </div>
-                                                         <div class="col-3 pb-2">
-                                                             <img src="{{this.LogoURL}}" width="100%" style="height: 35px;object-fit: contain;">
-                                                         </div>
+                                                        
                                                      </div>
-                                                     <div class="row pt-3">
+                                                     <div class="row">
                                                          <div class="col-12">
-                                                             <h1 class="m-0 pb-2" style="font-weight: 800;
+                                                             <h1 class="m-0 " style="font-weight: 800;
                                                              text-shadow: 2px 2px 2px #ffffff;
                                                              color: #7c6131;
                                                              letter-spacing: .8px;
                                                              font-size: 2rem;">Prime Membership</h1> 
                                                          </div>
                                                      </div>                
-                                                     <div class="row pt-2">
+                                                     <div class="row">
                                                          <div class="col-12" 
                                                          style="color: #7c6131; text-shadow: 2px 2px 3px #fff;">
                                                              <h4 style="font-weight: 800; margin:0">CARD NUMBER **** **** *{{this.data.Idd}}</h4> 
                                                          </div>
+                                                         <div class="col-12 pt-1 pb-1">
+                                                             <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff;">{{this.shop.Name}}</span> 
+                                                         </div>
+                                                         <div class="col-6">
+                                                             <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff;">{{this.shop.MobileNo1}}</span>
+                                                         </div>
+                                                         <div class="col-6" style="text-align: right;">
+                                                             <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff; font-size:10px; line-height: 9px;">Expiry {{this.data.VisitDate}}</span>
+                                                         </div>
+                                                        
+                                                        
                                                      </div>                
                                                 </div> 
                                                 <div class="col-6">
@@ -2767,29 +2769,38 @@
                                             <div class="row">
                                                 <div id="membershipCard" class="col-6" style="background-image: linear-gradient(2deg, #ffc10731, #ffc10737),url(https://png.pngtree.com/thumb_back/fh260/background/20220428/pngtree-abstract-3d-elegant-golden-ribbon-elements-and-lighting-effect-sparking-glitter-image_1108708.jpg); border-radius: 4px; padding: 4px 15px;background-size: 100%; box-shadow: 0px 0px 3px 0px #7a672d;">
                                                      <div class="row pt-2" style="border-radius: 4px;">
-                                                         <div class="col-9 ">
+                                                         <div class="col-12 ">
                                                             <h4 class="m-0" style="font-weight: 800; color: #000000;text-shadow: 2px 2px 4px #bfbfbf; ">{{this.data.Title}} {{this.data.Name}}</h4> 
 
                                                             <h4 class="m-0" style="font-weight: 800; color: #000000;text-shadow: 2px 2px 4px #bfbfbf; ">{{this.data.MobileNo1}}</h4> 
                                                          </div>
-                                                         <div class="col-3 pb-2">
-                                                             <img src="{{this.LogoURL}}" width="100%" style="height: 35px;object-fit: contain;">
-                                                         </div>
+                                                        
                                                      </div>
-                                                     <div class="row pt-3">
+                                                     <div class="row">
                                                          <div class="col-12">
-                                                             <h1 class="m-0 pb-2" style="font-weight: 800;
+                                                             <h1 class="m-0 " style="font-weight: 800;
                                                              text-shadow: 2px 2px 2px #ffffff;
                                                              color: #7c6131;
                                                              letter-spacing: .8px;
                                                              font-size: 2rem;">Prime Membership</h1> 
                                                          </div>
                                                      </div>                
-                                                     <div class="row pt-2">
+                                                     <div class="row">
                                                          <div class="col-12" 
                                                          style="color: #7c6131; text-shadow: 2px 2px 3px #fff;">
                                                              <h4 style="font-weight: 800; margin:0">CARD NUMBER **** **** *{{this.data.Idd}}</h4> 
                                                          </div>
+                                                         <div class="col-12 pt-1 pb-1">
+                                                             <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff;">{{this.shop.Name}}</span> 
+                                                         </div>
+                                                         <div class="col-6">
+                                                             <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff;">{{this.shop.MobileNo1}}</span>
+                                                         </div>
+                                                         <div class="col-6" style="text-align: right;">
+                                                             <span style="font-weight: 800; text-shadow: 2px 2px 4px #ffffff; font-size:10px; line-height: 9px;">Expiry {{this.data.VisitDate}}</span>
+                                                         </div>
+                                                        
+                                                        
                                                      </div>                
                                                 </div> 
                                                 <div class="col-6">
