--- a/web1/src/app/admin/plan-expiry/plan-expiry.component.html
+++ b/web1/src/app/admin/plan-expiry/plan-expiry.component.html
@@ -150,7 +150,7 @@
                                             <th></th>
                                             <th>{{this.sumOfCaAmount}}</th>
                                             <th></th>
-                                            <th></th>
+                                            <th>{{this.sumNoOfShops}}</th>
 
                                             <th></th>
                                             <th></th>
